feat: enhance activity and location management with new features and validations
- Add optional Lieu association to Activite entity for better activity location management.
- Introduce new fields in Lieu entity for shareability and maximum simultaneous activities.
- Update CreateActiviteRequest and UpdateActiviteRequest to include lieuId for activity creation and updates.
- Enhance ActiviteDto to return associated Lieu information in responses.
- Implement validation logic in LieuServiceImpl for shareable locations and maximum activities.
- Update unit tests for ActiviteServiceImpl and LieuServiceImpl to cover new functionality and edge cases.

These enhancements improve the management of activities and locations, allowing for better organization and validation of activity assignments to locations, which is crucial for effective stay management.